manifests/base/microservices/session-db/session-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: session-db
  namespace: sock-shop
  labels:
    name: session-db
spec:
  serviceName: "session-db"  
  replicas: 2
  selector:
    matchLabels:
      name: session-db
  template:
    metadata:
      labels:
        name: session-db
      annotations:
        prometheus.io/scrape: "false"
    spec:
      containers:
        - name: session-db
          image: registry.redhat.io/rhel9/redis-7:1-29.1726663415
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: session-db-vol
              mountPath: /data
      nodeSelector:
        node-role.kubernetes.io/worker: ""
  volumes:
    - name: session-db-vol
      emptyDir:
        medium: Memory
