manifests/base/microservices/session-db/session-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-db
  labels:
    name: session-db
  namespace: sock-shop
spec:
  clusterIP: None
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    name: session-db
